Fixed index header sizes on mobile

--- a/static/scss/_navbar.scss
+++ b/static/scss/_navbar.scss
@@ -67,6 +67,7 @@ nav
 		&.menuonly
 		{
 			@extend .menu;
+			display: none;
 		}
 	}
 }
